// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Btn disabled 1`] = `
<button
  class="text text_type_button text_color_primary button undefined false "
  data-testid="btn"
  disabled=""
  type="button"
>
  <p
    class="text undefined"
  />
</button>
`;

exports[`Btn isLoader 1`] = `
<img
  alt="Загрузка."
  class="loader_icon"
  src="loader.svg"
/>
`;

exports[`Btn onClick event 1`] = `
<button
  class="text text_type_button text_color_primary button undefined false "
  data-testid="btn"
  type="button"
>
  <p
    class="text undefined"
  />
</button>
`;

exports[`Btn with text 1`] = `
<button
  class="text text_type_button text_color_primary button undefined false "
  data-testid="btn"
  type="button"
>
  <p
    class="text undefined"
  >
    Click
  </p>
</button>
`;

exports[`Btn without text 1`] = `
<button
  class="text text_type_button text_color_primary button undefined false "
  data-testid="btn"
  type="button"
>
  <p
    class="text undefined"
  />
</button>
`;
